polyfilling selectors continued

--- a/base.html
+++ b/base.html
@@ -5,8 +5,9 @@
     <title>Base Playground</title>
 </head>
 <body>
-    <script>
+<div id="sai">saisaisia</div>
+<div class="saipc">saisaisia</div>
 
-    </script>
+<script src="Scripts/jquery-polyfill.js"></script>
 </body>
 </html>
