polyfilling selectors done

--- a/base.html
+++ b/base.html
@@ -9,5 +9,6 @@
 <div class="saipc">saisaisia</div>
 
 <script src="Scripts/jquery-polyfill.js"></script>
+<script src="Scripts/binary-search.js"></script>
 </body>
 </html>
