--- a/ajax.html
+++ b/ajax.html
@@ -42,7 +42,7 @@
 
     $('#gettime').addEventListener("click", function (e) {
         e.preventDefault();
-        oldAjax(action, method, oldCallback);
+        //oldAjax(action, method, oldCallback);
     });
 
 </script>
