--- a/base.html
+++ b/base.html
@@ -11,10 +11,10 @@
 <script src="Scripts/jquery-polyfill.js"></script>
 <script src="Scripts/binary-search.js"></script>
 <script>
-    var x = binarySearch([1, 2, 3, 4], 0, 4, 1);
+    var x = setTimeout(function() {binarySearch([1, 2, 3, 4], 0, 4, 1)}, 2000);
     if (x == 0) {
-        setTimeout(function() {alert("hello");}, 1000);
-        setTimeout(alert("hello"), 1500);
+        setTimeout(function() {alert("hello2");}, 1000);
+        setTimeout(function() {alert("hello3"); }, 1500);
     }
     alert(x);
 </script>
